add right content style

--- a/src/main.css
+++ b/src/main.css
@@ -97,3 +97,37 @@ main {
 	background: #61dafb;
 	color: black;
 }
+
+.rightContent {
+	background: #61dafb;
+	height: calc(100vh - 56px);
+	flex-basis: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	overflow-y: scroll;
+}
+
+.rightContent .linkCard {
+	background: #333;
+	width: 60%;
+	display: flex;
+	margin-top: 50px;
+	align-items: center;
+	border-radius: 5px;
+	box-shadow: 1px 1px 3px rbga(0, 0, 0, 0.5);
+	/* when there are many bookmarks, they wont shrink */
+	flex-shrink: 0;
+}
+
+.rightContent .linkCardImage {
+	background-size: cover;
+	background-position: center;
+	height: 100px;
+	width: 100px;
+}
+
+.rightContent .linkCardLink a {
+	color: white;
+	margin-left: 10px;
+}
