--- a/src/main.css
+++ b/src/main.css
@@ -94,12 +94,12 @@ main {
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
-	background: #61dafb;
+	background: linear-gradient(100deg, rgb(215, 215, 32) 1%, rgb(50, 50, 20));
 	color: black;
 }
 
 .rightContent {
-	background: #61dafb;
+	background: linear-gradient(100deg, rgb(255, 255, 112) 1%, rgb(10, 10, 10));
 	height: calc(100vh - 56px);
 	flex-basis: 50%;
 	display: flex;
