--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Spartan:300,400,600,700&display=swap');
+
 /* resetting the body, to remove the automatic margin that it has */
 body {
 	margin: 0;
-	font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+	font-family: '-apple-system', 'Spartan', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
 		'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'sans-serif';
 }
 
@@ -81,6 +83,10 @@ main {
 	color: white;
 }
 
+.leftContent form label {
+	padding-top: 5px;
+}
+
 .leftContent form input {
 	padding: 5px;
 	border-radius: 5px;
@@ -118,16 +124,40 @@ main {
 	box-shadow: 1px 1px 3px rbga(0, 0, 0, 0.5);
 	/* when there are many bookmarks, they wont shrink */
 	flex-shrink: 0;
+	border: 2px solid white;
 }
 
-.rightContent .linkCardImage {
-	background-size: cover;
-	background-position: center;
-	height: 100px;
-	width: 100px;
+.rightContent .contentCard {
+	border: 2px solid yellow;
+	display: flex;
 }
 
 .rightContent .linkCardLink a {
 	color: white;
 	margin-left: 10px;
+	border: 2px solid blue;
+}
+
+.rightContent .buttons {
+	margin: auto;
+}
+
+.card-btn {
+	cursor: pointer;
+	background-color: transparent;
+	border: none;
+	outline: none;
+	border: 2px solid red;
+}
+
+.btn-delete i {
+	font-size: 16px;
+	color: #bbb;
+	margin-right: 20px;
+}
+
+.btn-edit i {
+	font-size: 16px;
+	color: #bbb;
+	margin-right: 20px;
 }
